--- a/app/views/main/resume.html.erb
+++ b/app/views/main/resume.html.erb
@@ -1,5 +1,5 @@
 <div class="container darkbox">
-    <div class="col-md-3 shadow">	
+    <div class="col-md-3 ">	
         <h2 class="text-center big bounceIn ">Skills</h2>
         <div class="darkerbox shadow">
             
