--- a/app/views/main/about.html.erb
+++ b/app/views/main/about.html.erb
@@ -1,6 +1,6 @@
 <div class="col-md-3">
     <%= image_tag("brit-pic.jpg", class: "img-responsive bounceIn shadow") %>
-    
+    <%= link_to "Stuff &nbsp; <i class='fa fa-heart-o'></i>&nbsp;<i class='fa fa-heartbeat'>&nbsp;</i><i class='fa fa-heart-o'></i>".html_safe, life_path, class: "btn index-btn bounceIn btn-lg"  %>
 </div>
  
 <div class="col-md-9 bg-black">
