--- a/app/views/blog/posts/_form.html.erb
+++ b/app/views/blog/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for([:blog, post]) do |f| %>
+<%= simple_form_for([:blog, @category, post]) do |f| %>
   <% if post.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(post.errors.count, "error") %> prohibited this post from being saved:</h2>
