--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -16,6 +16,9 @@
        <%= link_to " &nbsp;<i class='fa fa-folder-open'></i>&nbsp; View Resume".html_safe, resume_path, class: "btn index-btn bounceIn btn-block rounded" %>
        <%= link_to "<i class='fa fa-tv'></i>&nbsp; Web Development".html_safe, web_dev_path, class: "btn index-btn bounceIn btn-lg btn-lg rounded"  %>
         <%= link_to "<i class='fa fa-pencil'></i>&nbsp; Graphic Design".html_safe, tshirts_path, class: "btn index-btn bounceIn btn-lg rounded"  %>
+        <div class="text-center">
+            <%= image_tag("BeFunky Collage2.jpg", class: "img-responsive") %>
+        </div>
     </div>
 
 </div>
