--- a/app/views/main/life.html.erb
+++ b/app/views/main/life.html.erb
@@ -21,6 +21,13 @@
             </div>
         </div>
         <div class="col-md-6">
+            <h2>Buy Me A Boat</h2>
+            <div class="embed-responsive embed-responsive-16by9">
+                <%= embed("https://www.youtube.com/watch?v=mQPjKSVe1tQ") %>
+            </div>
+            
+        </div>
+        <div class="col-md-6">
             <h2>Fight Song</h2>
             <div class="embed-responsive embed-responsive-16by9">
                 <%= embed("https://www.youtube.com/watch?v=xo1VInw-SKc") %>
