--- a/app/views/blog/categories/index.html.erb
+++ b/app/views/blog/categories/index.html.erb
@@ -1,29 +1,4 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Listing Categories</h1>
-
-<table class='table'>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Featured</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @categories.each do |category| %>
-      <tr>
-        <td><%= category.name %></td>
-        <td><%= category.featured %></td>
-        <td><%= link_to 'Show', blog_category_path(category) %></td>
-        <td><%= link_to 'Edit', edit_blog_category_path(category) %></td>
-        <td><%= link_to 'Destroy', blog_category_path(category), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Category', new_blog_category_path %>
+<div class="col-md-12 darkerbox">
+  <h1>Categories</h1>
+  <%= render @categories %>
+</div>
