--- a/app/views/main/about.html.erb
+++ b/app/views/main/about.html.erb
@@ -1,49 +1,43 @@
-<div class="col-md-3">
+<div class="col-md-12 darkerbox rounded">
+<h1 class="text-center white bounceIn4">Hey there - I'm Brittany!</h1>
+<div class="col-md-4">
     <%= image_tag("brit-pic.jpg", class: "img-responsive bounceIn shadow") %>
     <%= link_to "Stuff &nbsp; <i class='fa fa-heart-o'></i>&nbsp;<i class='fa fa-heartbeat'>&nbsp;</i><i class='fa fa-heart-o'></i>".html_safe, life_path, class: "btn index-btn bounceIn btn-lg"  %>
 </div>
  
-<div class="col-md-9 bg-black">
-    <h1 class="text-center white bounceIn4">Hey there - I'm Brittany!</h1>
+<div class="col-md-8">
+    <div class="col-md-10">
+        <p>
+            I've always loved art & design. I found my love for it high school when I spent my junior & senior years at the Lorain County JVS 
+            in the Web & Graphic Design program. From there I attended The Art Institute of Pittsburgh as a graphic design major. 
+            <br>
+            <blockquote>This is when I decided that I wanted to do more with my life than just "making cool things to look at".
+            <small>Don't get my wrong, logo designs are fun...but I wanted my work to have more meaning than that...</small></blockquote>
+        </p>
+        <p>
+            I transferred from AIP to Lorain County Community College after 2 semesters and ended up graduating with an 
+            associates degree in Human Resources. Shortly after I moved back to Ohio, I 
+            landed a job at a local staffing agency in their payroll department. 
+        </p>
+        <p>
+            My primary job is to collect paper time sheets (via email, fax, phone, etc.) from 100+ 
+            client companies (we're talking 800+ employees with a turn over of 120+ new starts a week. *chaos*)
+            and manually enter them into multiple software systems on a weekly basis.
+        </p>
     
-    <p>
-        I've always loved art & design. I found my love for it high school when I spent my junior & senior years at the Lorain County JVS 
-        in the Web & Graphic Design program. From there I attended The Art Institute of Pittsburgh as a graphic design major. 
-        <br>
-        <blockquote>This is when I decided that I wanted to do more with my life than just "making cool things to look at".
-        <small>Don't get my wrong, logo designs are fun...but I wanted my work to have more meaning than that...</small></blockquote>
-    </p>
-    <p>
-        I transferred from AIP to Lorain County Community College after 2 semesters and ended up graduating with an 
-        associates degree in Human Resources. Shortly after I moved back to Ohio, I 
-        landed a job at a local staffing agency in their payroll department. 
-        
-        
-    </p>
-    <p>
-    My primary job is to collect paper time sheets (via email, fax, phone, etc.) from 100+ 
-    client companies (we're talking 800+ employees with a turn over of 120+ new starts a week. *chaos*)
-    and manually enter them into multiple software systems on a weekly basis.
-    </p>
-    <div class="col-md-6">
-        <%= image_tag("inclustaff/timesheet_3.jpg", class: "img-responsive") %>
-        <hr>
-        <%= link_to "Visit IncluStaff.com", "http://www.inclustaff.com", class: "btn btn-info pull-right", target: "_blank" %>
-    </div>
-    <div class="col-md-6 darkbox">
-        <p class="">
+        <p>
             The rest of the week I spend correcting data entry & other human errors. Every day I would go to work 
             and think…”There has to be an easier way to do this.” But there wasn’t. So I decided to try and create a solution 
             myself. After a few months of learning web development through YouTube videos, online tutorials and blog posts and was
             able to teach myself enough to develop, IncluStaff.
         </p>
         
+        <h3>IncluStaff is great, but what I learned in the process is worth so much more...</h3>
+        <%= link_to "Visit IncluStaff.com", "http://www.inclustaff.com", class: "btn btn-info pull-right", target: "_blank" %>
     </div>
-    <p>
-        
-        <br>
-        <blockquote>IncluStaff is great, but what I learned in the process is worth so much more...</blockquote>
-    </p>
+    
+    
     
 
+</div>
 </div>
